refactor: remove Java dormitory-service, migrate to Go-only architecture
Remove 101 Java source files (dormitory-service/ Spring Boot module) in favor of dormitory-service-go. Update AGENTS.md and README.md to reflect Go-only architecture.

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-openagent)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>